Added VGG16 model

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ notebooks/.ipynb_checkpoints/inception-rsna-winners-checkpoint.ipynb
 .DS_Store
 models/keras_weights_sequential_3.hdf5
 notebooks/.ipynb_checkpoints/initial-simple-cnn-checkpoint.ipynb
+final_notebooks/.ipynb_checkpoints/vgg16-concatenated-checkpoint.ipynb
+*.pickle
+*.hdf5
