--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ notebooks/.ipynb_checkpoints/initial-simple-cnn-checkpoint.ipynb
 final_notebooks/.ipynb_checkpoints/vgg16-concatenated-checkpoint.ipynb
 *.pickle
 *.hdf5
+notebooks/.ipynb_checkpoints/vgg16-concatenated-checkpoint.ipynb
